Update 05_자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.md

--- a/week_01/05_자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.md
+++ b/week_01/05_자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.md
@@ -46,7 +46,51 @@ class SpellChecker {
 > **클래스를 매번 수정해야하기 때문에 유연성이 떨어진다.**
 >
 > 또한, 멀티 쓰레드 환경에서도 적합하지 않다.
-> 원래 있었던 객체가 다른 객체로 바뀌어도 동작을 보장해야하는데, 이러한 상황에서는 불안정하기 때문이다. 
+> 원래 있었던 객체가 다른 객체로 바뀌어도 동작을 보장해야하는데, 이러한 상황에서는 불안정하기 때문이다.    
+
+
+### 3. 의존 객체 주입을 사용하기
+```
+public class SpellChecker { 
+	private final Lexicon dictionary; 
+
+	private SpellChecker(Lexicon dictionary) { 
+    		this.dictionary = Objects.requireNonNull(dictionary); 
+ 	} 
+
+	public boolean isValid(String word) { return true; } 
+	public List<String> suggestions(String typo) { return null; } 
+}
+```
+> 생성자를 통해 외부에서 의존성 객체를 전달 받으면, 연관된 객체가 여러 개이든 상관 없이 그 추상 객체만 잘 주입 받으면 문제 없이 잘 작동한다.
+>
+> 또한, **불변을 보장**하여 여러 클라이언트가 의존 객체들을 안심하고 공유할 수 있으며, 주입 당시 다른 객체들을 삽입할 수 있으므로 테스트에도 용이하다.    
+>
+> 
+✔️ 생성자 주입은 **"객체의 불변성 확보" , "테스트 코드 작성 용이", "필드 객체에 final 키워드 사용 가능"** 이라는 이점이 많아 제일 많이 사용된다.    
+
+
+✔️ 이러한 방식을 응용하여 **팩토리 메서드 패턴**으로 활용할 수 있다.
+```
+@FunctionalInterface
+public interface Supplier<T> {
+		/**
+     * Gets a result.
+     *
+     * @return a result
+     */
+    T get(); // T 타입 객체를 찍어낸다
+}
+```
+➡️ Supplier<T> 를 입력으로 받는 메서드는 일반적으로 한정적 와일드 카드 타입을 사용해, **팩터리 타입 매개변수를 제한해야 한다.**  
+
+
+
+### 4. 주의점
+✖️ 의존 객체 주입이 유연성과 테스트 용이성을 개선해주긴 하지만, 의존성이 수천 개나 되는 큰 프로젝트에서는 코드를 어지럽게 만들기도 한다.   
+
+대거(Dagger), 주스(Guice), 스프링(Spring) 같은 **의존 객체 주입 프레임워크를 사용하면 이런 어질러짐을 해소할 수 있다.**
+
 
 
 
