--- a/week_01/06_불필요한 객체 생성을 피하라.md
+++ b/week_01/06_불필요한 객체 생성을 피하라.md
@@ -1,1 +1,3 @@
 ## 아이템 6. 불필요한 객체 생성을 피하라
+> 불필요한 객체 생성을 피하면서 자원을 절약해야 한다.
+* 같은 기능의 객체를 새로 생성하는 대신, 객체 하나를 재사용하는 편이 나을 때가 많다. 특히, 불변 객체는 언제든 재사용할 수 있다.
