[아이템7] 다 쓴 객체 참조를 해제하라

--- a/week_01/7_다_쓴_객체_참조를_해제하라_유아.md
+++ b/week_01/7_다_쓴_객체_참조를_해제하라_유아.md
@@ -2,7 +2,7 @@
 
 > p 36 ~ 39
 
-- Java 애플리케이션은 JVM(Java Virtual Machine) 위에서 구동된다. JVM에서는 Java 애플리케이션이 사용하는 메모리를 관리하고 있는데, 이 JVM의 기능 중 더 이상 사용하지 않는 객체를 청소하여 공간을 확보하는 가비지 컬렉터(이하 GC)라는 작업이 있다.
+- JVM에서는 Java 애플리케이션이 사용하는 메모리를 관리하고 있는데, 이 JVM의 기능 중 더 이상 사용하지 않는 객체를 청소하여 공간을 확보하는 가비지 컬렉터(이하 GC)라는 작업이 있다.
 - Java Runtime 시 Heap 영역에 저장되는 객체들은 따로 정리하지 않으면 계속해서 메모리에 쌓이게 되어 `OutOfMemoryException` 이 발생한다. WAS의 경우, 다운될 수가 있다.
 - 이를 방지하기 위해 JVM에서는 주기적으로 사용하지 않는 객체를 수집하여 정리한다.
 
@@ -15,24 +15,23 @@ Java의 GC는 매우 다양한 종류가 있지만 공통적으로 크게 다음
 
 ### GC의 수거 대상 기준: Reachability
 
-- Java GC는 객체가 가비지인지 판별하기 위해서 **reachability**라는 개념을 사용한다.
-- 유효한 참조가 있으면 'reachable'로 없다면 'unreachable'로 구별하고, **unreachable 객체를 가비지로 간주해 GC를 수행**한다.
-- 한 객체는 여러 다른 객체를 참조하고, 참조된 다른 객체들도 마찬가지로 또 다른 객체들을 참조할 수 있으므로 객체들은 참조 사슬을 이룬다.
-- 이런 상황에서 유효한 참조 여부를 파악하려면 항상 유효한 최초의 참조가 있어야 하는데 이를 **객체 참조의 root set**이라고 한다.
+Java GC는 객체가 가비지인지 팔별하기 위해 "**reachability**"라는 개념을 사용한다.
 
-  - ![Alt text](https://d2.naver.com/content/images/2015/06/helloworld-329631-1.png)
-  - (\* Java는 메모리를 사용하기 위해 Runtime Data Area에 영역별로 저장한다.)
-  - java stack 영역의 데이터들, 즉 Java 메서드 실행 시에 사용하는 지역 변수와 파라미터들에 의한 참조
-  - method 영역의 static 데이터에 의한 참조
-  - JNI(Java Native Interface)에 의해 생성된 객체들
+이는 객체가 유효한 참조가 있는 경우 "reachable"로 간주하고, 그렇지 않으면 "unreachable"로 간주하여 해당 객체를 가비지로 처리한다. 이 과정에서 유효한 최초의 참조가 있어야 하며, 이를 "객체 참조의 root set"이라 한다.
 
-- ![rootset](https://d2.naver.com/content/images/2015/06/helloworld-329631-2.png)
+root set은 Java 메모리 구조에서 reachable을 결정하는 중요 요소이다. 다음과 같은 요소로 구성된다.
 
-  GC의 수거 대상은 GC Roots로부터 참조를 탐색했을 때, Unreachable한 Object들이다.
+![Alt text](https://d2.naver.com/content/images/2015/06/helloworld-329631-1.png)
 
-> 이처럼 가비지 컬렉션 언어에서는 (의도치 않게 객체를 살려두는) 메모리 누수를 찾기가 아주 까다롭다.
->
-> 객체 참조 하나를 살려두면 가비지 컬렉터는 그 객체뿐 아니라 그 객체를 참조하는 모든 객체 (그리고 또 그 객체들이 참조하는 모든 객체..)를 회수해가지 못한다.
+- java stack 영역의 데이터들, 즉 Java 메서드 실행 시에 사용하는 지역 변수와 파라미터들에 의한 참조
+- method 영역의 static 데이터에 의한 참조
+- JNI(Java Native Interface)에 의해 생성된 객체들
+
+![rootset](https://d2.naver.com/content/images/2015/06/helloworld-329631-2.png)
+GC는 이 root set으로부터 참조를 탐색하며 unreachable한 객체를 판단하고, 해당 객체를 청소 대상으로 처리한다.
+
+GC가 의도치 않게 객체를 살려두는 상황에 메모리 누수가 발생한다.
+예를 들어, 한 객체가 유효한 참조를 가지고 있다면 가비지 컬렉터는 그 객체뿐 아니라 그 객체를 참조하는 모든 객체와 이어지는 객체들까지 회수해가지 못한다. 이는 객체 그래프가 복잡하고 참조가 꼬여 있는 경우 특히 발생한다.
 
 ## GC 메모리 누수 예제 : Stack
 
@@ -89,11 +88,9 @@ public class Item07 {
 
 ![](https://velog.velcdn.com/images/jmjmjmz732002/post/45b67873-20fa-431a-9a0a-bcdba22a16a5/image.png)
 
-위와 같이 단순히 elements의 size만 조절하며 객체를 꺼내고 있기에 실제 객체 참조는 살아있는 것을 확인할 수 있다.
+위와 같이 객체 컬렉션에서 단순히 요소의 크기만을 조절하게 객체를 꺼내는 경우, **다 쓴 참조(obsolete reference)**가 남아있을 수 있다. GC는 이러한 다 쓴 참조를 인식하지 못하고 참조를 유지한다.
 
-가비지 콜렉터는 이러한 **다 쓴 참조(obsolete reference)는 회수하지 못한다.**
-그래서 단 몇 개의 객체가 매우 많은 객체를 회수되지 못하게 할 수 있고 잠재적으로 성능에 악영향을 줄 수 있다.
-⇒ `OutOfMemoryException` 이나 디스크 페이징을 발생시킬 수 있다!
+이러한 상황은 메모리 누수를 초래하고, 심한 경우 OutOfMemoryException` 이나 디스크 페이징을 유발하여 성능에 부정적 영향을 끼칠 수 있다.
 
 해법은 간단하다. 해당 참조를 다 썼을 때 null 처리 (참조 해제)하면 된다.
 
@@ -107,18 +104,17 @@ public Object pop() {
 }
 ```
 
-![](https://velog.velcdn.com/images/jmjmjmz732002/post/fd303d00-aa14-4beb-8734-1357c6b5e9e7/image.png)
 ![](https://velog.velcdn.com/images/jmjmjmz732002/post/9aaf8068-950f-49ff-be73-8e4c3492cc3c/image.png)
 
 다 쓴 참조를 null 처리하면 null 처리한 참조를 실수로 사용하려 하면 프로그램은 즉시 NPE을 던지며 종료된다는 측면에서도 이점을 가진다고.
 
 ### 메모리 누수의 해결은 무조건적인 null 처리인가? NOPE!
 
-- 모든 객체를 다 쓰자마자 일일이 null 처리할 필요도 없고 바람직하지도 않다. **프로그램을 필요 이상으로 지저분하게 만들 뿐이다.**
-- 객체 참조를 null 처리하는 일은 **예외적인 경우**여야 한다.
-  - 다 쓴 참조를 해제하는 가장 좋은 방법은 그 참조를 담은 변수를 유효 범위(scope) 밖으로 밀어내는 것.
-  - 변수의 범위를 최소가 되게 정의했다면 이 일은 자연스럽게 이뤄진다.
-    ⇒ 지역 변수를 가장 처음 쓰일 때 선언하기, 선언과 동시에 초기화하기 등 아이템 57에서 계속..✏️
+메모리 누수 문제를 해결하겠다고 모든 객체에 대해 무조건적인 null 처리하는 것은 실용적이지 않다는 의견에 동의한다. 오히려 코드를 복잡하게 만들고, 올바르게 관리되지 않을 경우 에러를 발생시킬 수 있다.
+
+물론 예외적인 상황에서는 명시적인 null 처리가 훨씬 안전할 것 같다. 파일 핸들이나 네트워크 연결, 데이터베이스 연결 등의 자원 관리 객체에 있어서는 명시적인 자원 해제가 필요할 것 같다.
+
+다 쓴 참조를 해제하는 가장 좋은 방법은 **해당 참조를 담은 변수의 범위(scope)를 최소화하여 참조가 필요 없어질 때 자연스럽게 해제되도록 하는 것**이다. 변수의 범위를 최소화함으로써 변수의 생명주기를 관리하고 필요 없어진 참조가 변수의 범위를 벗어나면 자동으로 해제된다. 이렇게 하면 명시적인 Null 처리를 수행할 필요가 없고, 코드의 가독성과 유지보수성을 향상시킬 수 있다.
 
 # 메모리 누수의 주범 살펴보기
 
@@ -186,8 +182,8 @@ public Object pop() {
   - ```java
     public static void main(String[] args) {
         WeakHashMap<Person, String> map = new WeakHashMap<>();
-        Person p1 = new Fruit("yooa");
-        Person p2 = new Fruit("jeongmin");
+        Person p1 = new Person("yooa");
+        Person p2 = new Person("jeongmin");
         map.put(p1, "test a");
         map.put(p2, "test b");
         p1 = null;
@@ -195,11 +191,27 @@ public Object pop() {
         map.entrySet().forEach(System.out::println ); // test a의 결과는 출력되지 않음!!
     }
     ```
-  - 이미지 ID를 key로, 이미지 개체를 value로 유지하는 캐시를 만들고 싶다고 할 때, value 개체가 많은 메모리를 사용할 수 있으므로 HashMap이 좋은 선택이 아닐 수 있다.
-  - 애플리케이션에서 더 이상 사용하지 않을 경우에도 GC에 의해 캐시가 회수되지 않기 때문.
-  - WeakHashMap을 사용해 이미지 ID key가 사용되지 않는 경우 해당 항목은 메모리에서 삭제되도록 구현할 수 있다.
+- WeakHashMap은 키(key)를 약한 참조로 처리하기에, 만약 값(value)이 메모리에 제거되지 않는 경우 여전히 메모리 누수가 발생 할 수 있다.
 
-2. 캐시를 만들 때 보통은 캐시 엔트리의 유효 기간을 정확히 정의하기 어렵기 때문에 시간이 지날수록 엔트리의 가치를 떨어뜨리는 방식을 흔히 사용한다.
+  - ```java
+    WeakHashMap<Person, String> map = new WeakHashMap<>();
+        Person p1 = new Person("yooa");
+        Person p2 = new Person("jeongmin");
+        String value1 = new String("test a"); // 강한 참조를 가진 문자열
+        String value2 = new String("test b"); // 강한 참조를 가진 문자열
+        map.put(p1, value1);
+        map.put(p2, value2);
+        p1 = null;
+        System.gc();
+
+        // 엔트리를 순회하면서 출력
+        map.entrySet().forEach(entry -> {
+            System.out.println(entry.getKey().getName() + " => " + entry.getValue());
+        }); // test b만 출력
+    ```
+
+2. 캐시를 만들 때 보통은 캐시 엔트리의 유효 기간을 정확히 정의하기 어렵기 때문에 시간이 지날수록 엔트리의 가치를 떨어뜨리는 방식을 흔히 사용한다. 엔트리가 오래된 것일수록 새로운 데이터로 업데이트되는데, 이로 인해 메모리 공간을 효율적으로 관리할 수 있다.
+
 3. 쓰지 않는 엔트리를 청소하기
    - (`ScheduledThreadPoolExecutor` 같은) 백그라운드 스레드를 활용하거나 캐시에 새 엔트리를 추가할 때 부수 작업으로 수행하는 방법이 있다.
    - `LinkedHashMap` 은 `removeEldestEntry` 메서드를 써서 후자의 방식으로 처리한다. 더 복잡한 캐시를 만들고 싶다면 `java.lang.ref` 패키지를 직접 활용해야 할 것이다.
@@ -208,8 +220,7 @@ public Object pop() {
 
 - Map을 상속받았고, hashMap을 확장한 구조
 - doubleLinkedList 형태
-  - ![](https://velog.velcdn.com/images/jmjmjmz732002/post/6b89caed-4e0a-4e2e-a0b8-c559827a8a4e/image.png)
-    단순 연결 리스트(linked list)와는 다르게 노드가 이전 노드(previous)와 다음 노드(next)로 구성되어 있는 형태이다. 즉, LinkedList를 이중으로 사용하여 요소의 순서를 유지하는 것
+  - LinkedList를 이중으로 사용하여 요소의 순서를 유지하는 것
 - HashMap과는 별도로 LinkedHashMap에서는 accessOrder 이라는 값을 가지고 있다.
   - ![](https://velog.velcdn.com/images/jmjmjmz732002/post/0b6b42f4-2dbf-490b-a86d-2f19445984ee/image.png)
 - 만약에 이 값이 true면 `AfterNodeAccess` 접근하고 난 후 노드 처리를 하는 메서드, `AfterNodeInsertion` 노드를 추가하고 난 후의 처리를 하는 메서드를 호출하게 된다.
