06_불필요한 객체 생성을 피하라.md

--- a/week_01/06_불필요한 객체 생성을 피하라.md
+++ b/week_01/06_불필요한 객체 생성을 피하라.md
@@ -1,3 +1,41 @@
 ## 아이템 6. 불필요한 객체 생성을 피하라
 > 불필요한 객체 생성을 피하면서 자원을 절약해야 한다.
 * 같은 기능의 객체를 새로 생성하는 대신, 객체 하나를 재사용하는 편이 나을 때가 많다. 특히, 불변 객체는 언제든 재사용할 수 있다.
+
+### 1. 불필요한 객체를 생성하지 말자
+> 불변 객체의 경우 언제든 **재사용**할 수 있고, 가변 객체라 하더라도 사용 중에 변경이 되지 않을 것임을 안다면 **재사용** 할 수 있다.
+
+##### 재사용 할 수 있음에도 불구하고 매번 같은 기능의 객체를 생성하는 것은 불필요하며, 성능에 제약을 가져다 준다.
+
+```java
+String s = new String("java"); // new로 생성하면 항상 새로운 객체를 생성하게 됨
+String s = "java"; // 새로운 인스턴스를 매번 만드는 대산, 하나의 String 인스턴스를 재사용한다.
+                   // 같은 가상 머신 안에서 이와 똑같은 문자열 리터럴을 사용하는 모든 코드가 같은 객체를 재사용함이 보장된다. 
+```
+
+##### 주의사항
+- 객체를 재사용하면 메모리와 성능상의 이점을 기대할 수 있다. 하지만, 객체를 재사용한다는 것은 하나의 객체를 여러곳에서 동시에 사용한다는 뜻이다. 이 내용을 주의해서 개발하지 않으면 코드가 뜻하지 않게 동작할 수 있다.
+```java
+// list 객체와 멀티스레스 환경에서도 안전한 synchronizedList 객체를 생성하였다.
+List<Integer> list = new ArrayList<Integer>();
+list.add(1);
+list.add(2);
+list.add(3);
+List<Integer> synchronizedList = Collections.synchronizedList(list);
+
+// list를 clear 했는데 synchronizedList의 요소도 모두 사라졌다. synchronizedList가 list객체를 재활용 하기 때문이다.
+list.clear();
+System.out.println(synchronizedList);
+```
+
+### 2. static factory 메서드 사용하기
+- 생성자 대신 정적 팩터리 메서드를 제공하는 불변 클래스에서는 불필요한 객체 생성을 피할 수 있다.   
+
+➡️ 생성자는 호출할 때마다 새로운 객체를 만들지만, 팩터리  메서드는 그렇지 않기 때문이다.
+
+```java
+Boolean true1 = Boolean.valueOf("true");
+Boolean true2 = Boolean.valueOf("true");
+
+System.out.println(true1 == true2); // true
+```
