--- a/week_03/[아이템 26] 로 타입은 사용하지 말라_승주.md
+++ b/week_03/[아이템 26] 로 타입은 사용하지 말라_승주.md
@@ -1,4 +1,103 @@
-### ⭐ item 26 : 로 타입은 사용하지 말라
-##
+## ⭐ item 26 : 로 타입은 사용하지 말라
 
-#### 
+### :star2: 제네릭 타입
+
+1. 제네릭 클래스 & 제네릭 인터페이스  :  선언에 **타입 매개변수가 사용된** 클래스와 인터페이스    
+
+&nbsp; → 클래스, 메소드에서 **사용할 데이터 타입을 나중에 확정**하는 기법이다. 여기서 '나중에' 라는 말은 클래스나 메소드를 선언할 때가 아닌, 인스턴스를 생성하거나 메서드를 호출할 때 정한다는 의미이다.       
+
+
+**Ex) 제네릭 타입**  
+```java
+
+  // <T> 를 사용하여 매개변수화 타입 정의
+  // 제네릭 클래스
+public class Box<T> {
+    
+    private T item;
+
+    public T getItem() {
+        return item;
+    }
+
+    public void setItem(T item) {
+        this.item = item;
+    }
+
+   //제네릭 메서드
+    public <T> Coffee makeCoffee(T capsule) {
+
+        return new Coffee(capsule);
+    }
+}
+```
+
+2. 제네릭 타입을 하나 정의하면, 그에 따른 **로타입(raw type) 도 함께 정의**된다.   
+
+
+&nbsp; &nbsp; → 로 타입(raw type) 이란, 제네릭 타입에서 타입 **매개변수를 전혀 사용하지 않았을 때**를 말한다.     
+
+```java
+  ex ) List<E> 의 raw 타입은 List다.   
+  → raw 타입은 타입 선언에서 제네릭 타입 정보가 전부 지워진 것처럼 동작하는데, 제네릭이 활용되기 전 코드와 호환되도록 하기 위해 존재한다.
+```   
+<br></br>
+
+**로타입(raw type) 을 사용하면 안되는 예시**
+```java
+
+class Apple {}
+class Banana {}
+
+class FruitBox {
+    // 모든 클래스 타입을 받기 위해 최고 조상인 Object 타입으로 설정
+    private Object[] fruit;
+
+    public FruitBox(Object[] fruit) {
+        this.fruit = fruit;
+    }
+
+    public Object getFruit(int index) {
+        return fruit[index];
+    }
+}
+
+public static void main(String[] args) {
+    Apple[] arr = {
+            new Apple(),
+            new Apple()
+    };
+
+FruitBox box = new FruitBox(arr);
+
+    Apple apple = (Apple) box.getFruit(0);
+
+    //에러 발생
+    Banana banana = (Banana) box.getFruit(1);
+}
+```
+→ 해당 코드는, 상위 타입에 객체를 할당했기 때문에 컴파일러가 오류를 발견하지 못하게 된다.   
+
+
+
+   &nbsp;이렇게 되면, 오류가 발생하고 한참 뒤인 런타임에야 알아챌 수 확률이 높아진다. 또한, 해당 에러를 파악하기 위해서 코드 전체를 훑어 봐야 할 확률도 높아진다.     
+
+
+
+<br></br>
+**제네릭 타입을 사용하여 타입 안정성을 확보**
+```java
+private final FruitBox<Apple> stamps = ...;
+```
+&nbsp; → 이렇게 선언하면, 컴파일러는 FruitBox 에 Apple 의 인스턴스만 넣어야 함을 인지할 수 있게 된다.      
+
+
+&nbsp; 또한, 컴파일러는 FruitBox에서 원소를 꺼내는 모든 곳에 보이지 않는 형변환을 추가하여 절대 실패하지 않음을 보장한다.   
+
+
+<br></br>
+
+
+> '로 타입(raw type)' 을 쓰게 되면, **제네릭이 안겨주는 안전성과 표현력을 모두 잃게 된다.**
+
+ 
