--- a/week_03/[아이템 26] 로 타입은 사용하지 말라_승주.md
+++ b/week_03/[아이템 26] 로 타입은 사용하지 말라_승주.md
@@ -2,7 +2,7 @@
 
 ### :star2: 제네릭 타입
 
-1. 제네릭 클래스 & 제네릭 인터페이스  :  선언에 **타입 매개변수가 사용된** 클래스와 인터페이스    
+#### 1. 제네릭 클래스 & 제네릭 인터페이스  :  선언에 *타입 매개변수가 사용된* 클래스와 인터페이스    
 
 &nbsp; → 클래스, 메소드에서 **사용할 데이터 타입을 나중에 확정**하는 기법이다. 여기서 '나중에' 라는 말은 클래스나 메소드를 선언할 때가 아닌, 인스턴스를 생성하거나 메서드를 호출할 때 정한다는 의미이다.       
 
@@ -32,7 +32,7 @@ public class Box<T> {
 }
 ```
 
-2. 제네릭 타입을 하나 정의하면, 그에 따른 **로타입(raw type) 도 함께 정의**된다.   
+##### 2. 제네릭 타입을 하나 정의하면, 그에 따른 *로타입(raw type) 도 함께 정의*된다.   
 
 
 &nbsp; &nbsp; → 로 타입(raw type) 이란, 제네릭 타입에서 타입 **매개변수를 전혀 사용하지 않았을 때**를 말한다.     
@@ -98,6 +98,112 @@ private final FruitBox<Apple> stamps = ...;
 <br></br>
 
 
-> '로 타입(raw type)' 을 쓰게 되면, **제네릭이 안겨주는 안전성과 표현력을 모두 잃게 된다.**
+> '로 타입(raw type)' 을 쓰게 되면, **제네릭이 안겨주는 안전성과 표현력을 모두 잃게 된다.**   
+
+<br/>
+
+```java
+public static void main(String[] args) {
+    List<String> strings = new ArrayList<>();
+   
+    unsafeAdd(strings, Integer.valueOf(42));
+    
+    // 컴파일조차 안 됨 : ClassCastException , Integer 를 String 으로 변환 시도
+    String s = strings.get(0);	// 컴파일러가 자동으로 형변환 코드를 넣어줌
+}
+
+// raw type인 List 이용
+private static void unsafeAdd(List<Object> list, Object o) {
+    list.add(o);
+}
+```     
+
+<br/>
+
+
+#### 3. *원소의 타입을 몰라도* 되는 로 타입을 사용하는 방법    
+
+
+**잘못된 예시**
+```java
+static int numElementsInCommon(Set s1, Set s2) { 
+    int result = 0;
+    for (Object o : s1)
+        if (s2.contains(o1))
+            result++;
+    
+    return result;
+}
+```
+- 해당 코드는 Set 이라는 로 타입(raw type) 을 사용하여 안전하지 않다.   
+
+
+✔️ 이 경우에는 **비 한정적 와일드 카드 타입을 사용하는 것이 좋다.**   
+
+**비 한정적 와일드 카드 타입 사용**   
+
+
+```java
+static int numElementsInCommon(Set<?> s1, Set<?> s2) {
+```   
+
+
+- Set 과 Set<?> 의 차이는 **안정성**이다.     
+
+Set 은 로 타입으로 **아무 원소나 넣을 수 있으니** 타입 불변식을 훼손하기 쉽지만, Set<?> 타입은 **null 외에는 어떤 원소도 넣을 수 없기 때문에** 타입 불변식이 훼손 되지 않는다.    
+
+
+
+#### 4. 예외   
+
+
+1. class 를 리터럴에는 로 타입을 사용해야 한다.   
+
+> 자바 명세는 class 리터럴에 **매개 변수화 타입을 사용하지 못하도록** 하였음. (배열과 기본 타입은 허용)    
+
+
+```java
+// 🙆🏻‍♂️ 다음 세 개는 성공 , 이 때는 로 타입을 사용
+List.class
+String[].class
+int.class
+
+// 🙅🏻‍♂️ 다음 두 개는 불가 
+List<String>.class
+List<Integer>.class
+```   
+
+
+2. instance of 연산자를 사용할 때     
+
+> ✔️ **instance of 연산자란?** 원래의 인스턴스 형이 맞는지 체크하는 연산자이다.    
+
+
+- 런 타임시에는 제네릭 타입 정보가 지워지므로, instance of 연산자는 비 한정적 와일드카드 타입 이외에의 매개변수화 타입에는 적용할 수 없다.   
+
+
+&nbsp; 따라서, 로 타입이든 비 한정적 와일드 카드 타입이든 instance of 는 완전히 똑같이 동일하게 동작한다.      
+
+
+**📝 올바르게 사용한 예시**
+```java
+if (o instanceof Set){
+  Set<?> s = Set<?> o;
+  ...
+}
+```   
+
+
+#### 5. 정리  
+
+> **로 타입을 사용하면, 런타임에 예외가 발생할 수 있으므로 사용하면 안된다.**
+>
+> 로 타입은 제네릭이 도입되기 전 이전 코드와의 호환성을 위해 제공 될 뿐이다.
+>
+> 또한, Set<Object> 타입은 **어떤 타입의 객체도 저장 할 수 있는 매개 변수화 타입**이고
+>
+> Set<?> 타입은 **모종의(어떠한 종류)의 타입 객체만 저장될 수 있는 와일드 카드 타입**이다.
+
+
 
  
