--- a/week_04/32_제네릭과 가변인수를 함께 쓸 때는 신중하라.md
+++ b/week_04/32_제네릭과 가변인수를 함께 쓸 때는 신중하라.md
@@ -92,7 +92,7 @@ public class GenericVarargsUnsafe {
 위의 코드에서 addElementsToList 메서드는 가변인수 매개변수를 사용하여 리스트에 요소를 추가하는 것을 시도합니다. 
 그러나 이러한 방식은 안전하지 않습니다. 제네릭 배열은 컴파일러가 경고를 표시하며, 런타임에 ClassCastException과 같은 오류가 발생할 수 있습니다. 
 안전한 대안은 가변인수 매개변수를 사용하는 대신 배열이나 컬렉션을 명시적으로 전달하거나, 컬렉션에 요소를 추가하는 메서드를 사용하는 것입니다.  
-이렇게 하면 안전성과 가독성이 향상되며 컴파일러 경고와 런타임 오류의 위험이 감소합니다. <br>
+이렇게 하면 안전성과 가독성이 향상되며 컴파일러 경고와 런타임 오류의 위험이 감소합니다. 
 ```
   
 ### 제네릭 매개변수 배열의 참조를 노출한다 - 안전하지 않다
@@ -118,18 +118,11 @@ public class GenericVarargsUnsafe {
     }
 } 
 ```
-컴파일에 이상없이 진해오디지만 실행하면은 ClassCastException을 던집니다. <br>
-형변환하는 곳이 보이지 않는데도 말이다.  <br>
-pickTwo하면 넘겨주는 타입은 Object[]이고 String[]로 형변환 하는 코드를 자동으로 컴파일러가 생성하지만 Object[]는 String[]의 하위 타입이 아니므로 형변환이 실패하게 된다
-  
-  
-### Object[]는 String[]의 하위 타입이 아니므로 형변환이 실패
 ```
-Object[]가 String[]의 하위 타입이 아닌 이유는 배열은 공변적(covariant)이 아니기 때문입니다. 
-배열은 타입 안정성을 보장하기 위해 공변적이지 않습니다. 이는 배열이 런타임에서 타입 정보를 유지하지 않는 한계로 인해 발생합니다. 
-타입 안전성을 보장하기 위해 배열은 실제 데이터 타입과는 관계없이 Object로 업캐스팅될 수 있습니다.  
-따라서 Object[]는 String[]와 호환되지 않으며,
-String[] 타입의 배열을 Object[] 타입의 변수에 할당하면 컴파일러는 경고를 표시하지만 실행 시에는 예외가 발생하지 않습니다. 
+컴파일에 이상없이 진행되지만 실행하면은 ClassCastException을 던집니다. 
+형(type)변환하는 곳이 보이지 않는데도 말입니다.  
+왜냐하면 pickTwo하면 넘겨주는 타입은 Object[]이고 String[]로 형변환 하는 코드를 자동으로 컴파일러가 생성하지만  
+Object[]는 String[]의 하위 타입이 아니므로 형변환이 실패하기 때문입니다 
 ```
   
 ## 제네릭 varargs매개변수 배열에 다른 메서드가 접근하도록 하용하는경우 2가지 
