--- a/week_04/32_제네릭과 가변인수를 함께 쓸 때는 신중하라.md
+++ b/week_04/32_제네릭과 가변인수를 함께 쓸 때는 신중하라.md
@@ -119,17 +119,20 @@ public class GenericVarargsUnsafe {
 } 
 ```
 ```
-컴파일에 이상없이 진행되지만 실행하면은 ClassCastException을 던집니다. 
-형(type)변환하는 곳이 보이지 않는데도 말입니다.  
-왜냐하면 pickTwo하면 넘겨주는 타입은 Object[]이고 String[]로 형변환 하는 코드를 자동으로 컴파일러가 생성하지만  
-Object[]는 String[]의 하위 타입이 아니므로 형변환이 실패하기 때문입니다 
+컴파일에 이상 없이 진행되지만 실행하면은 ClassCastException을 던집니다.
+형(type)변환하는 곳이 보이지 않는데도 말입니다.
+왜냐하면 pickTwo하면 넘겨주는 타입은 Object[]이고 String[]로 형변한 하는 코드를 자동으로 컴파일러가 생성하지만
+Object[]는 String[]의 하위 타입이 아니므로 형 변환이 실패하기 때문입니다.
+
 ```
+
+
   
 ## 제네릭 varargs매개변수 배열에 다른 메서드가 접근하도록 하용하는경우 2가지 
   
 #### 1. @SafeVarargs로 제대로 어노테이션된 또 다른 varargs메서드에 넘기는 것은 안전하다.
-@SafeVarargs 어노테이션은 메서드가 안전하게 가변인수 매개변수를 다루고 있음을 나타내는 어노테이션입니다. <br>
-이 어노테이션을 사용하면 경고를 억제하고 가변인수 매개변수와 관련된 잠재적인 안전하지 않은 상황을 처리할 수 있습니다. <br>
+@SafeVarargs 어노테이션은 메서드가 안전하게 가변 인수 매개변수를 다루고 있음을 나타내는 어노테이션입니다. <br>
+이 어노테이션을 사용하면 경고를 억제하고 가변 인수 매개변수와 관련된 잠재적인 안전하지 않은 상황을 처리할 수 있습니다. <br>
 ```java
 import java.util.List;
 import java.util.Arrays;
@@ -152,7 +155,7 @@ public class SafeVarargsExample {
 
 
 #### 2. 배열 내용의 일부 함수를 호출만 하는 일반 메서드에 넘기는 것도 안전하다
-그저 가변인수를 받아서 다른 일반 메서드에 넘기는 것이다
+그저 가변 인수를 받아서 다른 일반 메서드에 넘기는 것이다
 ```java
 import java.util.Arrays;
 
@@ -174,21 +177,21 @@ public class SafeVarargsExample {
     }
 }   
 ```
-someMethod 메서드는 가변인수 배열의 내용을 출력하는 일반 메서드입니다. <br>
+someMethod 메서드는 가변 인수 배열의 내용을 출력하는 일반 메서드입니다. <br>
 callSomeMethod 메서드가 배열을 someMethod에 전달할 때는 컴파일러 경고가 발생하지 않습니다.  <br>
 그리고 런타임에도 안전하게 작동합니다. <br>
   
   
 ### @SafeVarargs 사용할 때 규칙
 `제네릭이나 매개변수화 타입의 varargs 매개변수를 받는 모든 메서드에 @SafeVarargs를 사용해라.`
-- varargs매개변수 배열에 아무것도 저장하지 않는다 (읽기만 할때)
-- 그 배열(혹은 복제본)을 신뢰할 수 없는 코드에 노출하지 않는다. (다른분들에게 질문하기) 
+- varargs매개변수 배열에 아무것도 저장하지 않는다 (읽기만 할 때)
+- 그 배열(혹은 복제본)을 신뢰할 수 없는 코드에 노출하지 않는다. (다른 분들에게 질문하기) 
 - 재정의할 수 없는 메서드에만 사용하기
 
   
 ### 느낀점
-가변인수를 활용하지 않는게 제일 안전한거 같다 <br>
+가변 인수를 활용하지 않는 게 제일 안전한 거 같다 <br>
 언제 사용하는지 의견을 나누어 보면 좋을 것 같다 <br>
-이야기하면 좋을것 (신뢰할 수 없는 코드란 무엇일가?) <br>
+이야기하면 좋을 것 (신뢰할 수 없는 코드란 무엇일까?)
   
   
