[아이템 29] 이왕이면 제네릭 타입으로 만들라.md

--- a/week_04/[아이템 29] 이왕이면 제네릭 타입으로 만들라.md
+++ b/week_04/[아이템 29] 이왕이면 제네릭 타입으로 만들라.md
@@ -196,7 +196,6 @@ private E[] elements;
 
 - 현업에서 더 선호하는 방식이지만, E 가 Object 가 아닌 경우 **배열의 런타임 타입이 컴파일타임 타입과 달라 힙오염을 유발** 
 
-&nbsp;
 
  **두번째 방식 : element 타입을 변경**  
 
@@ -205,7 +204,7 @@ private E[] elements;
 
 - 힙 오염이 마음에 걸리는 프로그래머는, 두번째 방식을 사용하기도 한다.
 
-
+&nbsp;
 #### 제네릭 Stack 을 사용하는 프로그램
 
 - 명령줄 인수들을 역순으로 바꿔 대문자로 출력하는 프로그램
@@ -225,5 +224,53 @@ public class Stack<T> {
     }
 }
 ```
+> 제네릭 타입 안에서 List 를 사용하는게 항상 가능하지도, 꼭 더 좋은 것도 아니다.
+>
+> 자바가 List 를 기본 타입으로 제공하지 않으므로, ArrayList 같은 제네릭 타입도 결국 기본 타입인 배열을 사용해 구현해야 한다.
+>
+> 또한 HashMap 같은 제네릭 타입은 성능을 높일 목적으로 배열을 사용하기도 한다.
+&nbsp;
+#### 제네릭 타입의 매개변수
+
+
+**대다수의 제네릭 타입은 타입 매개변수에 아무런 제약을 두지 않는다.**   
+
+
+→ Stack<Object> Stack<int[]> Stack<List<String>>, Stack 등을 만들 수 있다.   
+
+
+**단 기본 타입은 사용할 수 없다.**   
+
+
+- String<int> Stack<double> 로 만들려고 하면 컴파일 오류가 발생한다. 이는 자바 제네릭 시스템의 근본적인 문제이다.   
+
+
+  → 박싱된 기본 타입을 사용하여 우회할 수 있다.  
+
+
+
+**✔️ 타입 매개변수에 제약을 두는 제네릭**   
+
+
+```java
+package java.util.concurrent.DelayQueue;
+class DelayQueue<E extends Delayed> implements  BlockingQueue<E> {}
+```
+
+> Delayed 의 하위 타입만 받는다는 의미이다.
+>
+> 이렇게 함으로써 DelayQueue 자신과 DelayQueue 를 사용하는 클라이언트는 DelayQueue 의 원소에서 **형변환 없이** 곧바로 Delayed 클래스의 메서드를 호출할 수 있다.(ClassCastException 을 걱정할 필요가 없다)
+>
+> 이러한 타입 변수 E 를 **한정적 타입 매개변수** 라고 한다.
+>
+> 모든 타입은 자기 자신의 하위 타입이므로 DelayQueue로도 사용할 수 있음을 기억해야 한다.  
+
+
+### 📝 정리
+- 클라이언트에서 직접 형변환해야 하는 타입보다 제네릭 타입이 더 안전하고 쓰기 편하다.
+- 새로운 타입을 설계할 때는 형변환 없이도 사용할 수 있도록 하자. 그런 경우에는, 제네릭 타입으로 만들어야 하는 경우가 많다.
+- 기존 타입 중 제네릭이었어야 하는 부분이 있다면 제네릭 타입으로 변경하자.
+  →기존 클라이언트에는 아무런 영향을 주지 않으면서, 새로운 사용자를 훨씬 편하게 해주는 길이다. 
+
 
 
