--- a/week_07/52_다중정의는_신중히_사용하라_유아.md
+++ b/week_07/52_다중정의는_신중히_사용하라_유아.md
@@ -193,24 +193,24 @@ ex.submit(System.out::println); // Compiler Error!
 
 정리하자면 컴파일 단계에서 다중정의된 메서드 중에서 뭘 사용해야되는지를 결정해야되는데, 이 결정하는 알고리즘이 답을 찾지 못한다는 것입니다.
 
-(\* 이 부분을 깊게 들어가는 것은 컴파일러 개발자의 몫이기에 선택과 집중을 하도록 합시다.)
+> (\* 깊게 들어가는 것은 컴파일러 개발자의 몫이기에 선택과 집중을 하도록 합시다.)
 
 이 부분에서 시사하는 바는 메서드 다중정의에서 함수형 인터페이스가 서로 근본적으로 다르더라도 같은 위치의 인수를 받는 것만으로 컴파일 에러가 터질 수 있다는 것입니다. (== 근본적으로 다르지 않게 된다)
 
 ## 근본적으로 다르다는 것.
 
-배열 ≠ 클래스 타입 (Object 외)
-
-인터페이스 ≠ 배열 (Cloneable, Serializable 외)
-
-String과 Throwable 처럼 상하위 관계가 아닌 두 클래스는 ‘관계 없다(unrelated)’고 표현하고, 이 또한 근본적으로 다릅니다.
+> 배열 ≠ 클래스 타입 (Object 외)
+>
+> 인터페이스 ≠ 배열 (Cloneable, Serializable 외)
+>
+> String과 Throwable 처럼 상하위 관계가 아닌 두 클래스는 ‘관계 없다(unrelated)’고 표현하고, 이 또한 근본적으로 다릅니다.
 
 이때, 근본적으로 같은 인수를 받아주지만 안전한 경우도 있습니다.
 
-구체 클래스와 공통 인터페이스 관계 같이 더 일반적인 개념이 있고 다중정의 메서드의 기능이 완전히 같다면 다른 동작이 기대되지 않으므로 안전합니다.
+구체 클래스와 공통 인터페이스 관계 같이 더 일반적인 개념이 있고, 다중정의 메서드의 기능이 완전히 같다면 다른 동작이 기대되지 않으므로 안전합니다.
 
 ## 마무리하며
 
 실제 Java 라이브러리 내에서도 다중정의로 인해 혼란이 초래된 경우가 상당히 많다는 것을 알았습니다. 우리보다 더 뛰어난 역량과 깊은 이해를 가잔 선배 자바 개발자분들께서도 기능의 확장성 등을 고려하지 못하고 다양한 실수가 있었다는 것이 놀랍기도 합니다.
 
-생각없이 필요할 때 다중정의를 이용하곤 했는데 이는 지양해야 하고 가능하면 메서드 파라미터 개수가 같은 경우 가능하면 피하는 것이 맞을 것 같습니다.
+생각없이 필요할 때 다중정의를 이용하곤 했는데 이는 지양해야 하고 (특히 파라미터 개수가 같은 경우) 가능하면 피하는 것이 맞을 것 같습니다.
