--- a/week_09/71_필요 없는 검사 예외 사용은 피하라_낑깡.md
+++ b/week_09/71_필요 없는 검사 예외 사용은 피하라_낑깡.md
@@ -52,14 +52,31 @@ class CheckedException {
 
 ## 2. 상태 검사 메서드 사용
 ```java 
-...
+    public static FileReader getFile(){
+        try {
+            return new FileReader("C:\\test\\a.txt");
+        }catch (FileNotFoundException e){
+            e.getMessage();
+        }
+    }
 
-FileReader file;
-if (filePermitted()) {
-    file = getFile();
-} else {
-    return new CustomException("파일이 없음!");
-}
+    public static boolean filePermitted() {
+        try {
+            FileReader file = new FileReader("C:\\test\\a.txt");
+            return true;
+        } catch (FileNotFoundException e) {
+            return false;
+        }
+    }
+
+    public static String getMessage(){
+        // Reading file from path in local directory
+        String result = "";
+        FileReader file;
+        if (filePermitted()) {
+            file = getFile();
+        } else {
+        }
 ...
 
 ```
