--- a/week_09/67_최적화는 신중히 하라_낑깡.md
+++ b/week_09/67_최적화는 신중히 하라_낑깡.md
@@ -85,7 +85,7 @@ API, 네트워크 프로토콜, 영구 저장용 데이터 포맷 등 외부 시
 2. APM 툴(Application Performance Mornitoring or Management)
    1. 운영용 서버를 진단 및 모니터링하기 위해 사용
    2. 목적 : 문제점 진단, 시스템 모니터링 및 운영 등 목적에 따라 용도가 상이함
-3. JHM (Java Microbenchmark Harness) : OpenJDK에서 만든 성능 측정용 라이브러리
+3. JMH (Java Microbenchmark Harness) : OpenJDK에서 만든 성능 측정용 라이브러리
    ```java 
    import java.util.ArrayList;
    import java.util.HashMap;
