--- a/week_09/68_일반적으로 통용되는 명명 규칙을 따르라_낑깡.md
+++ b/week_09/68_일반적으로 통용되는 명명 규칙을 따르라_낑깡.md
@@ -5,7 +5,7 @@ _p381 14_
 
 _JSL, 6.1_, _JSR-123_
 
-## 1. JSL (Java Language Specification)
+## 1. JLS (Java Language Specification)
 > **자바 언어 명세서**
 > 
 > 자바 언어를 위한 문법과 정상적/비정상적 규칙들을 기술.
